@@ -153,9 +153,9 @@ typedef struct {
   xine_t              *xine;
 } xv_class_t;
 
-static const char *const prefer_types[] = VIDEO_DEVICE_XV_PREFER_TYPES;
-static const char *const bicubic_types[] = VIDEO_DEVICE_XV_BICUBIC_TYPES;
-static const char *const sync_atoms[] = VIDEO_DEVICE_XV_VSYNC_ATOMS;
+VIDEO_DEVICE_XV_DECL_BICUBIC_TYPES;
+VIDEO_DEVICE_XV_DECL_PREFER_TYPES;
+VIDEO_DEVICE_XV_DECL_SYNC_ATOMS;
 
 static uint32_t xv_get_capabilities (vo_driver_t *this_gen) {
   xv_driver_t *this = (xv_driver_t *) this_gen;
@@ -1134,7 +1134,7 @@ static xcb_xv_port_t xv_autodetect_port(xv_driver_t *this,
   for (; adaptor_it->rem; xcb_xv_adaptor_info_next(adaptor_it))
     if (adaptor_it->data->type & XCB_XV_TYPE_IMAGE_MASK &&
         (prefer_type == xv_prefer_none ||
-         strcasestr (xcb_xv_adaptor_info_name (adaptor_it->data), prefer_types[prefer_type])))
+         strcasestr (xcb_xv_adaptor_info_name (adaptor_it->data), prefer_substrings[prefer_type])))
     {
       int j;
       for (j = 0; j < adaptor_it->data->num_ports; ++j)
@@ -1165,7 +1165,7 @@ static vo_driver_t *open_plugin(video_driver_class_t *class_gen, const void *vis
   xcb_xv_list_image_formats_cookie_t list_formats_cookie;
   xcb_xv_list_image_formats_reply_t *list_formats_reply;
 
-  xcb_xv_adaptor_info_iterator_t adaptor_it;
+  xcb_xv_adaptor_info_iterator_t adaptor_it, adaptor_first;
   xcb_xv_image_format_info_iterator_t format_it;
 
   this = (xv_driver_t *) calloc(1, sizeof(xv_driver_t));
@@ -1203,12 +1203,12 @@ static vo_driver_t *open_plugin(video_driver_class_t *class_gen, const void *vis
     return NULL;
   }
 
-  adaptor_it = xcb_xv_query_adaptors_info_iterator(query_adaptors_reply);
+  adaptor_first = xcb_xv_query_adaptors_info_iterator(query_adaptors_reply);
   xv_port = config->register_num (config, "video.device.xv_port", 0,
 				  VIDEO_DEVICE_XV_PORT_HELP,
 				  20, NULL, NULL);
   prefer_type = config->register_enum (config, "video.device.xv_preferred_method", 0,
-				       prefer_types, VIDEO_DEVICE_XV_PREFER_TYPE_HELP,
+				       prefer_labels, VIDEO_DEVICE_XV_PREFER_TYPE_HELP,
 				       10, NULL, NULL);
 
   if (xv_port != 0) {
@@ -1216,14 +1216,25 @@ static vo_driver_t *open_plugin(video_driver_class_t *class_gen, const void *vis
       xprintf(class->xine, XINE_VERBOSITY_NONE,
 	      _("%s: could not open Xv port %d - autodetecting\n"),
 	      LOG_MODULE, xv_port);
+      adaptor_it = adaptor_first;
       xv_port = xv_autodetect_port (this, &adaptor_it, xv_port, prefer_type);
     } else
       xv_find_adaptor_by_port (xv_port, &adaptor_it);
   }
   if (!xv_port)
+  {
+    adaptor_it = adaptor_first;
     xv_port = xv_autodetect_port (this, &adaptor_it, 0, prefer_type);
+  }
   if (!xv_port)
+  {
+    if (prefer_type)
+      xprintf(class->xine, XINE_VERBOSITY_NONE,
+	      _("%s: no available ports of type \"%s\", defaulting...\n"),
+	      LOG_MODULE, prefer_labels[prefer_type]);
+    adaptor_it = adaptor_first;
     xv_port = xv_autodetect_port (this, &adaptor_it, 0, xv_prefer_none);
+  }
 
   if (!xv_port) {
     xprintf(class->xine, XINE_VERBOSITY_LOG,
