@@ -57,22 +57,26 @@
 	_("pitch alignment workaround"), \
 	_("Some buggy video drivers need a workaround to function properly.")
 
-#define VIDEO_DEVICE_XV_VSYNC_ATOMS \
-	{ "XV_SYNC_TO_VBLANK", "XV_VSYNC" }
+#define VIDEO_DEVICE_XV_DECL_SYNC_ATOMS \
+	static const char *const sync_atoms[] = \
+		{ "XV_SYNC_TO_VBLANK", "XV_VSYNC" };
 
-typedef enum {
-  xv_prefer_none, xv_prefer_overlay, xv_prefer_textured
-} xv_prefertype;
-#define VIDEO_DEVICE_XV_PREFER_TYPES \
-	{ "Any", "Overlay", "Textured Video", NULL }
+#define VIDEO_DEVICE_XV_DECL_PREFER_TYPES \
+	typedef enum { \
+	  xv_prefer_none, xv_prefer_overlay, xv_prefer_textured, xv_prefer_blitter, \
+	} xv_prefertype; \
+	static const char *const prefer_labels[] = \
+		{ "Any", "Overlay", "Textured Video", "Blitter", NULL }; \
+	static const char prefer_substrings[][8] = \
+		{ "", "Overlay", "Texture", "Blitter" };
 #define VIDEO_DEVICE_XV_PREFER_TYPE_HELP \
 	_("video display method preference"), \
 	_("Selects which video output method is preferred. " \
 	  "Detection is done using the reported Xv adaptor names.\n" \
 	  "(Only applies when auto-detecting which Xv port to use.)")
 
-#define VIDEO_DEVICE_XV_BICUBIC_TYPES \
-	{ "Off", "On", "Auto", NULL }
+#define VIDEO_DEVICE_XV_DECL_BICUBIC_TYPES \
+	static const char *const bicubic_types[] = { "Off", "On", "Auto", NULL };
 #define VIDEO_DEVICE_XV_BICUBIC_HELP \
 	_("bicubic filtering"), \
 	_("This option controls bicubic filtering of the video image. " \
